bug fix deployment

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             <textarea class="notes__body">I m the notes body...</textarea>
         </div> -->
     </div>
-    <script src="JS/main.js" type="module"></script>
+    <script src="./JS/main.js" type="module"></script>
 </body>
 </html>
